--- a/public/fonts.css
+++ b/public/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Vazir';
-    font-weight: bold;
+    font-weight: 700;
     src: url('./fonts/Vazirmatn-Bold.woff2');
 }
 @font-face {
