--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,18 @@
     }
 }
 
+@layer components {
+    .textField {
+        @apply py-2 px-2 rounded-xl w-full font-thin border outline-none border-secondary-300 bg-secondary-100 hover:border-primary-800 focus:border-primary-900 focus:shadow-lg focus:shadow-primary-200
+    }
+    .btn {
+        @apply py-2 px-2 rounded-xl font-thin shadow-lg shadow-primary-500 
+    }
+    .btn--primary {
+        @apply bg-primary-900 text-secondary-0 hover:bg-primary-800
+    }
+}
+
 * {
     font-family: Vazir;
 }
