--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,9 @@
     .btn--secondary{
         @apply bg-secondary-100 text-secondary-600
     }
+    .navLink{
+        @apply w-full relative flex h-full py-3 pr-2 rounded-r-xl font-thin items-center gap-x-2 after:content-none after:shadow-[-20px_-20px_0_10px] after:shadow-secondary-100 hover:after:content-[''] after:w-[20px] after:duration-0 hover:bg-secondary-100 hover:text-primary-800 after:transition-all after:h-[20px] after:bg-transparent after:absolute after:-bottom-[20px] after:rounded-[50%] after:left-0 before:shadow-[-20px_20px_0_10px] before:content-none before:shadow-secondary-100 hover:before:content-[''] before:w-[20px] before:duration-0 before:transition-all before:h-[20px] before:bg-transparent before:absolute before:-top-[20px] before:rounded-[50%] before:left-0
+    }
 }
 
 * {
