--- a/src/index.css
+++ b/src/index.css
@@ -4,73 +4,217 @@
 @tailwind utilities;
 
 @layer base {
-    :root {
-        &,
-        &.light-mode {
-            --background-app-rgb: 255, 255, 255;
-            --color-primary-900: 74, 109, 255;
-            --color-primary-800: 92, 124, 255;
-            --color-primary-700: 110, 138, 255;
-            --color-primary-600: 128, 153, 255;
-            --color-primary-500: 146, 167, 255;
-            --color-primary-400: 164, 182, 255;
-            --color-primary-300: 183, 197, 255;
-            --color-primary-200: 201, 211, 255;
-            --color-primary-100: 219, 226, 255;
-            --color-primary-50: 228, 233, 255;
-            --color-secondary-900: 17, 24, 39;
-            --color-secondary-800: 31, 41, 55;
-            --color-secondary-700: 55, 65, 81;
-            --color-secondary-600: 75, 85, 99;
-            --color-secondary-500: 107, 114, 128;
-            --color-secondary-400: 156, 163, 175;
-            --color-secondary-300: 209, 213, 219;
-            --color-secondary-200: 229, 231, 235;
-            --color-secondary-100: 243, 244, 246;
-            --color-secondary-50: 249, 250, 251;
-            --color-secondary-0: 255, 255, 255;
-            --color-success: 0, 192, 115;
-            --color-warning: 255, 153, 0;
-            --color-error: 255, 71, 87;
-            --color-red-500: 239, 68, 68;
-            --color-red-300: 252, 165, 165;
-        }
+  :root {
 
-        &.dark-mode {
-            --color-secondary-900: 249, 250, 251;
-            --color-secondary-800: 243, 244, 246;
-            --color-secondary-700: 229, 231, 235;
-            --color-secondary-600: 209, 213, 219;
-            --color-secondary-500: 156, 163, 175;
-            --color-secondary-400: 107, 114, 128;
-            --color-secondary-300: 75, 85, 99;
-            --color-secondary-200: 55, 65, 81;
-            --color-secondary-100: 31, 41, 55;
-            --color-secondary-50: 17, 24, 39;
-            --color-secondary-0: 24, 33, 47;
-            --backdrop-color: 0, 0, 0;
-        }
+    &,
+    &.light-mode {
+      --background-app-rgb: 255, 255, 255;
+      --color-primary-900: 74, 109, 255;
+      --color-primary-800: 92, 124, 255;
+      --color-primary-700: 110, 138, 255;
+      --color-primary-600: 128, 153, 255;
+      --color-primary-500: 146, 167, 255;
+      --color-primary-400: 164, 182, 255;
+      --color-primary-300: 183, 197, 255;
+      --color-primary-200: 201, 211, 255;
+      --color-primary-100: 219, 226, 255;
+      --color-primary-50: 228, 233, 255;
+      --color-secondary-900: 17, 24, 39;
+      --color-secondary-800: 31, 41, 55;
+      --color-secondary-700: 55, 65, 81;
+      --color-secondary-600: 75, 85, 99;
+      --color-secondary-500: 107, 114, 128;
+      --color-secondary-400: 156, 163, 175;
+      --color-secondary-300: 209, 213, 219;
+      --color-secondary-200: 229, 231, 235;
+      --color-secondary-100: 243, 244, 246;
+      --color-secondary-50: 249, 250, 251;
+      --color-secondary-0: 255, 255, 255;
+      --color-success: 0, 192, 115;
+      --color-warning: 255, 153, 0;
+      --color-error: 255, 71, 87;
+      --color-red-500: 239, 68, 68;
+      --color-red-300: 252, 165, 165;
     }
+
+    &.dark-mode {
+      --color-secondary-900: 249, 250, 251;
+      --color-secondary-800: 243, 244, 246;
+      --color-secondary-700: 229, 231, 235;
+      --color-secondary-600: 209, 213, 219;
+      --color-secondary-500: 156, 163, 175;
+      --color-secondary-400: 107, 114, 128;
+      --color-secondary-300: 75, 85, 99;
+      --color-secondary-200: 55, 65, 81;
+      --color-secondary-100: 31, 41, 55;
+      --color-secondary-50: 17, 24, 39;
+      --color-secondary-0: 24, 33, 47;
+      --backdrop-color: 0, 0, 0;
+    }
+  }
 }
 
 @layer components {
-    .textField {
-        @apply py-2 px-2 rounded-xl w-full font-thin border outline-none border-secondary-300 bg-secondary-100 hover:border-primary-800 focus:border-primary-900 focus:shadow-lg focus:shadow-primary-200
-    }
-    .btn {
-        @apply py-2 px-2 rounded-xl font-thin
-    }
-    .btn--primary {
-        @apply bg-primary-900 text-secondary-0 hover:bg-primary-800 shadow-lg shadow-primary-500 
-    }
-    .btn--secondary{
-        @apply bg-secondary-100 text-secondary-600
-    }
-    .navLink{
-        @apply w-full relative flex h-full py-3 pr-2 rounded-r-xl font-thin items-center gap-x-2 after:content-none after:shadow-[-20px_-20px_0_10px] after:shadow-secondary-100 hover:after:content-[''] after:w-[20px] after:duration-0 hover:bg-secondary-100 hover:text-primary-800 after:transition-all after:h-[20px] after:bg-transparent after:absolute after:-bottom-[20px] after:rounded-[50%] after:left-0 before:shadow-[-20px_20px_0_10px] before:content-none before:shadow-secondary-100 hover:before:content-[''] before:w-[20px] before:duration-0 before:transition-all before:h-[20px] before:bg-transparent before:absolute before:-top-[20px] before:rounded-[50%] before:left-0
-    }
+  .textField {
+    @apply text-secondary-800 py-2 px-2 rounded-xl w-full font-thin border outline-none border-secondary-300 bg-secondary-100 hover:border-primary-800 focus:border-primary-900 focus:shadow-lg focus:shadow-primary-200
+  }
+
+  .btn {
+    @apply py-2 px-2 rounded-xl font-bold
+  }
+
+  .btn--primary {
+    @apply text-white bg-primary-900 hover:bg-primary-800 shadow-lg shadow-primary-500
+  }
+
+  .btn--secondary {
+    @apply bg-secondary-100 text-secondary-600
+  }
+
+  .btn--danger {
+    @apply bg-transparent border border-error text-error font-bold hover:bg-error hover:text-white transition-all duration-150
+  }
+
+  .navLink {
+    @apply text-secondary-800 w-full relative flex h-full py-3 pr-2 rounded-r-xl font-thin items-center gap-x-2 after:content-none after:shadow-[-20px_-20px_0_10px] after:shadow-secondary-100 hover:after:content-[''] after:w-[20px] after:duration-0 hover:bg-secondary-100 hover:text-primary-800 after:transition-all after:h-[20px] after:bg-transparent after:absolute after:-bottom-[20px] after:rounded-[50%] after:left-0 before:shadow-[-20px_20px_0_10px] before:content-none before:shadow-secondary-100 hover:before:content-[''] before:w-[20px] before:duration-0 before:transition-all before:h-[20px] before:bg-transparent before:absolute before:-top-[20px] before:rounded-[50%] before:left-0
+  }
+
+  .badge {
+    @apply py-1 px-2 rounded-xl
+  }
+
+  .badge--secondary {
+    @apply text-secondary-500 bg-secondary-200
+  }
+
+  .badge--success {
+    @apply bg-green-100 text-success
+  }
+
+  .badge--error {
+    @apply bg-red-100 text-error
+  }
+}
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
 }
 
 * {
-    font-family: Vazir;
+  font-family: Vazir;
+}
+
+.rti--container {
+  background-color: rgb(var(--color-secondary-0)) !important;
+  border: 1px solid rgb(var(--color-secondary-200)) !important;
+  border-radius: 1rem !important;
+  --rti-radius: 0.375rem;
+  --rti-s: 0.5rem;
+  --rti-tag: #edf2f7;
+  --rti-tag-remove: #e53e3e;
+  border: none;
+}
+
+.rti--container .rti--input {
+  background-color: rgb(var(--color-secondary-200));
+  color: rgb(var(--color-secondary-800));
+  padding: 0.3rem 1rem;
+  border-radius: 0.5rem;
+  font-weight: 100;
+}
+
+.rti--tag {
+  background-color: rgb(var(--color-secondary-200)) !important;
+  color: rgb(var(--color-secondary-800)) !important;
+  font-weight: 100;
+}
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Vazir";
+  min-height: 100vh;
+  user-select: none;
+  background-color: rgb(var(--background-app-rgb));
+}
+
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  /* border: none; */
+  outline: none;
+  padding: 0;
+  margin: 0;
+}
+
+button {
+  cursor: pointer;
+  outline: none;
+}
+
+button:disabled {
+  cursor: default;
+  background-color: rgb(var(--color-secondary-100), 0.5);
+  pointer-events: none;
+  box-shadow: none;
+}
+
+/* inupt number */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0;
+  /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+  /* Firefox */
+}
+
+/* TABLE */
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+}
+
+table .title-row {
+  background-color: rgb(var(--color-secondary-100));
+}
+
+table td,
+table th {
+  border-bottom: 1px solid rgb(var(--color-secondary-200));
+  text-align: right;
+  white-space: nowrap;
+}
+
+table td {
+  font-weight: 100;
+  font-size: 1.5rem;
+}
+
+table th {
+  padding: 0.6rem 1rem;
+  color: rgb(var(--color-secondary-600));
+  font-size: 0.9rem;
+}
+
+table td {
+  font-size: 0.85rem;
+  padding: 1rem 1rem;
+  color: rgb(var(--color-secondary-600));
 }
